# comfyui-touch-resize

./: .comfyignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  RELEASE-CHECKLIST.md  __init__.py  biome.json  justfile  package-lock.json  package.json  pyproject.toml  release-please-config.json  tsconfig.json  vitest.config.js
.github/workflows/: ci.yml  publish.yml  registry-health.yml  release-please.yml
docs/blueprint/adrs/: 0001-adopt-typescript-bun-build.md
screenshots/: Dockerfile  Dockerfile.dockerignore  README.md  capture.mjs  entrypoint.sh  package.json  workflow.json
src/: comfyui-shims.d.ts  index.ts
tests/: test_init.py
tests/js/: controller.test.js  helpers.test.js  touch-resize.test.js
tests/js/__mocks__/: app.js
web/js/: touch-resize.js
